--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -23,7 +23,8 @@
     "@oslojs/encoding": "^1.1.0",
     "@repo/db": "workspace:^",
     "@repo/validators": "workspace:^",
-    "jose": "^5.9.6"
+    "jose": "^5.9.6",
+    "cookie": "^1.0.2"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
