--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "prepare": "husky",
     "start": "sst shell -- pnpm -F nextjs start",
     "test": "pnpm vitest run",
+    "test:coverage": "pnpm vitest run --coverage",
     "test:e2e": "sst shell -- pnpm -F nextjs test:e2e",
     "typecheck": "turbo typecheck"
   },
@@ -27,6 +28,7 @@
     "@commitlint/config-conventional": "^19.6.0",
     "@repo/eslint-config": "workspace:*",
     "@types/aws-lambda": "8.10.146",
+    "@vitest/coverage-v8": "2.1.6",
     "commitizen": "^4.3.1",
     "commitlint": "^19.6.0",
     "drizzle-kit": "0.28.1",
